--- a/rails/Book_Store/Gemfile
+++ b/rails/Book_Store/Gemfile
@@ -64,3 +64,5 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'devise'
 
 gem 'will_paginate', '~> 3.1.0'
+
+gem 'jquery-rails'
