--- a/rails/Uploader_Management/Gemfile
+++ b/rails/Uploader_Management/Gemfile
@@ -67,3 +67,9 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem "paperclip", ">= 5.2.0"
 
 gem 'will_paginate', '~> 3.1.0'
+
+gem 'bootstrap', '~> 4.3.1'
+
+gem 'jquery-rails'
+gem 'popper_js', '~> 1.14.5'
+gem 'will_paginate-bootstrap'
