--- a/rails/Book_Store/Gemfile
+++ b/rails/Book_Store/Gemfile
@@ -66,3 +66,8 @@ gem 'devise'
 gem 'will_paginate', '~> 3.1.0'
 
 gem 'jquery-rails'
+
+gem 'bootstrap', '~> 4.3.1'
+
+gem 'popper_js', '~> 1.14.5'
+gem 'will_paginate-bootstrap'
