--- a/rails/Book_Store/Gemfile
+++ b/rails/Book_Store/Gemfile
@@ -70,4 +70,5 @@ gem 'jquery-rails'
 gem 'bootstrap', '~> 4.3.1'
 
 gem 'popper_js', '~> 1.14.5'
-gem 'will_paginate-bootstrap'
+# gem 'will_paginate-bootstrap'
+gem 'will_paginate-bootstrap4'
