--- a/rails/Library_management/Gemfile
+++ b/rails/Library_management/Gemfile
@@ -49,3 +49,4 @@ gem 'rack-cors'
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'rack-attack'
+gem 'pundit'
