--- a/rails/Library_management/Gemfile
+++ b/rails/Library_management/Gemfile
@@ -33,6 +33,7 @@ group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
   gem 'pry-rails'
   gem 'faker'
+  gem 'rspec-rails', '~> 3.5'
 end
 
 group :development do
@@ -50,3 +51,9 @@ gem 'rack-cors'
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'rack-attack'
 gem 'pundit'
+gem 'will_paginate'
+
+group :test do
+  gem 'factory_girl_rails', '~> 4.0'
+  gem 'shoulda-matchers', '~> 3.1'
+end
