--- a/rails/cr_library/Gemfile
+++ b/rails/cr_library/Gemfile
@@ -62,3 +62,4 @@ end
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 gem 'active_model_serializers', '~> 0.10.0'
+gem 'faker', :git => 'https://github.com/stympy/faker.git', :branch => 'master'
