--- a/rails/Book_Store/Gemfile
+++ b/rails/Book_Store/Gemfile
@@ -72,3 +72,5 @@ gem 'bootstrap', '~> 4.3.1'
 gem 'popper_js', '~> 1.14.5'
 # gem 'will_paginate-bootstrap'
 gem 'will_paginate-bootstrap4'
+
+gem 'omniauth-facebook'
