--- a/rails/profile_view/Gemfile
+++ b/rails/profile_view/Gemfile
@@ -45,3 +45,4 @@ end
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem "paperclip", "~> 6.0.0"
+gem 'active_model_serializers', '~> 0.10.0'
