--- a/rails/slim_temp/Gemfile
+++ b/rails/slim_temp/Gemfile
@@ -57,3 +57,5 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'slim'
 gem 'bootstrap', '~> 4.3.1'
 gem 'jquery-rails'
+
+gem 'font-awesome-rails'
