--- a/rails/slim_temp/Gemfile
+++ b/rails/slim_temp/Gemfile
@@ -58,4 +58,6 @@ gem 'slim-rails'
 gem 'bootstrap', '~> 4.3.1'
 gem 'jquery-rails'
 
-gem 'font-awesome-rails'
+# gem 'font-awesome-rails'
+
+gem 'font-awesome-sass', '~> 5.8.1'
