--- a/rails/policy_management/Gemfile
+++ b/rails/policy_management/Gemfile
@@ -65,3 +65,4 @@ gem "slim-rails"
 gem 'bootstrap', '~> 4.3.1'
 gem 'jquery-rails'
 gem 'font-awesome-sass', '~> 5.8.1'
+gem 'sprockets-rails', :require => 'sprockets/railtie'
