--- a/rails/Uploader_Management/Gemfile
+++ b/rails/Uploader_Management/Gemfile
@@ -73,3 +73,5 @@ gem 'bootstrap', '~> 4.3.1'
 gem 'jquery-rails'
 gem 'popper_js', '~> 1.14.5'
 gem 'will_paginate-bootstrap'
+gem 'pry-rails'
+gem 'byebug-color-printer'
